# test-gcp-gridstatus

./: .dockerignore  .gitignore  2025-10-29-Test_v2.ipynb  README.md  dockerfile  pyproject.toml  requirements.txt  results.parquet
app/: client_utils.py  main.py
src/app/: client_utils.py  main.py
tests/: test_read_from_gcs.py
